java 11, trying out